find_package(LLVM REQUIRED CONFIG)

set(BYTHON_AST_LIB bython-ast)

FILE(GLOB_RECURSE BYTHON_AST_SOURCE_FILES ${CMAKE_CURRENT_SOURCE_DIR}/*.cpp)

add_library(${BYTHON_AST_LIB} SHARED ${BYTHON_AST_SOURCE_FILES})
target_include_directories(${BYTHON_AST_LIB} PRIVATE
    ${CMAKE_CURRENT_SOURCE_DIR}/../

    ${EXTERNAL_INSTALL_LOCATION}/cpp-peglib
    ${LLVM_INCLUDE_DIRS}
)

target_compile_definitions(${BYTHON_AST_LIB} PUBLIC ${LLVM_DEFINITIONS} -DGRAMMAR_PATH="${GRAMMAR_PATH}")
target_link_libraries(${BYTHON_AST_LIB} PUBLIC bython-type bython-bc)